added touch input support

--- a/Thinkz/UI/StoryBoards/Base.lproj/Main.storyboard
+++ b/Thinkz/UI/StoryBoards/Base.lproj/Main.storyboard
@@ -110,6 +110,9 @@
                                     <segment title="Apple Pencil"/>
                                     <segment title="Touch"/>
                                 </segments>
+                                <connections>
+                                    <action selector="typeOfInputSegmentedControlValueChanged:" destination="8Cf-rf-iQb" eventType="valueChanged" id="LB5-VF-0z3"/>
+                                </connections>
                             </segmentedControl>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDP-A7-hV1" customClass="DrawingView" customModule="Thinkz" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="636" width="834" height="476"/>
@@ -122,16 +125,26 @@
                                     <action selector="testBtnTapped:" destination="8Cf-rf-iQb" eventType="touchUpInside" id="i33-2r-lwe"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yiN-Nr-W5R">
+                                <rect key="frame" x="767" y="589" width="47" height="39"/>
+                                <state key="normal" title="CLEAR"/>
+                                <connections>
+                                    <action selector="clearBtnTapped:" destination="8Cf-rf-iQb" eventType="touchUpInside" id="0p3-gF-ccH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="l1I-te-qNi" firstAttribute="bottom" secondItem="bDP-A7-hV1" secondAttribute="bottom" id="1Y8-Ln-oS9"/>
                             <constraint firstItem="l1I-te-qNi" firstAttribute="trailing" secondItem="bDP-A7-hV1" secondAttribute="trailing" id="4Mi-9b-a1Q"/>
                             <constraint firstItem="Ahn-it-3wb" firstAttribute="centerX" secondItem="CzT-5Y-Cqy" secondAttribute="centerX" id="6kh-pH-GCX"/>
+                            <constraint firstItem="yiN-Nr-W5R" firstAttribute="top" secondItem="uzq-jg-Obu" secondAttribute="bottom" constant="8" symbolic="YES" id="Hmc-hn-KI4"/>
+                            <constraint firstItem="bDP-A7-hV1" firstAttribute="top" secondItem="yiN-Nr-W5R" secondAttribute="bottom" constant="8" symbolic="YES" id="MYW-NM-h8y"/>
                             <constraint firstItem="l1I-te-qNi" firstAttribute="centerY" secondItem="uzq-jg-Obu" secondAttribute="bottom" id="PF4-wQ-07f"/>
                             <constraint firstItem="bDP-A7-hV1" firstAttribute="top" secondItem="8FQ-hf-Oow" secondAttribute="bottom" constant="20" id="Qtw-IZ-NZQ"/>
                             <constraint firstItem="bDP-A7-hV1" firstAttribute="leading" secondItem="l1I-te-qNi" secondAttribute="leading" id="W6Y-V4-9JQ"/>
                             <constraint firstItem="8FQ-hf-Oow" firstAttribute="leading" secondItem="l1I-te-qNi" secondAttribute="leading" constant="20" id="gVI-YO-S1x"/>
+                            <constraint firstItem="l1I-te-qNi" firstAttribute="trailing" secondItem="yiN-Nr-W5R" secondAttribute="trailing" constant="20" id="gsF-8B-hMY"/>
                             <constraint firstItem="bDP-A7-hV1" firstAttribute="top" secondItem="Ahn-it-3wb" secondAttribute="bottom" constant="20" id="lwf-06-U5h"/>
                             <constraint firstItem="uzq-jg-Obu" firstAttribute="leading" secondItem="l1I-te-qNi" secondAttribute="leading" id="ni9-0d-7Ke"/>
                             <constraint firstItem="8FQ-hf-Oow" firstAttribute="top" secondItem="uzq-jg-Obu" secondAttribute="bottom" constant="5" id="pdk-Z1-lNn"/>
