added WritePad Files + Grammar is now working

--- a/Thinkz/UI/StoryBoards/Base.lproj/Main.storyboard
+++ b/Thinkz/UI/StoryBoards/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVx-pS-frw">
                                                 <rect key="frame" x="0.0" y="0.0" width="734" height="30"/>
                                                 <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <state key="normal" title="Math Module">
+                                                <state key="normal" title="Grammar Module">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -37,7 +37,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oG6-Un-CIF">
                                                 <rect key="frame" x="0.0" y="60" width="734" height="30"/>
                                                 <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <state key="normal" title="Test Data">
+                                                <state key="normal" title="Math Module">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -70,7 +70,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="o2d-YK-SFU"/>
                     <connections>
-                        <segue destination="vbM-W2-2gJ" kind="show" identifier="InitToTest" id="4BK-Bq-Cjo"/>
                         <segue destination="8Cf-rf-iQb" kind="show" identifier="InitToMath" id="Ebh-6f-041"/>
                     </connections>
                 </viewController>
@@ -164,10 +163,10 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8FQ-hf-Oow">
-                                <rect key="frame" x="20" y="586" width="30" height="30"/>
-                                <state key="normal" title="test"/>
+                                <rect key="frame" x="20" y="586" width="70" height="30"/>
+                                <state key="normal" title="NEW LINE"/>
                                 <connections>
-                                    <action selector="testBtnTapped:" destination="8Cf-rf-iQb" eventType="touchUpInside" id="i33-2r-lwe"/>
+                                    <action selector="newLineBtnTapped:" destination="8Cf-rf-iQb" eventType="touchUpInside" id="i33-2r-lwe"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yiN-Nr-W5R">
@@ -241,41 +240,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vMl-8M-XT3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1652.517985611511" y="-93.345323741007192"/>
-        </scene>
-        <!--Test Data View Controller-->
-        <scene sceneID="C0G-iO-xiI">
-            <objects>
-                <viewController id="vbM-W2-2gJ" customClass="TestDataViewController" customModule="Thinkz" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wqg-Pa-caQ">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="thS-el-0Dl">
-                                <rect key="frame" x="0.0" y="50" width="834" height="1062"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="thS-el-0Dl" firstAttribute="leading" secondItem="4oD-Ta-WZx" secondAttribute="leading" id="DPF-B2-gan"/>
-                            <constraint firstItem="4oD-Ta-WZx" firstAttribute="trailing" secondItem="thS-el-0Dl" secondAttribute="trailing" id="Fc3-I7-JnK"/>
-                            <constraint firstItem="thS-el-0Dl" firstAttribute="top" secondItem="4oD-Ta-WZx" secondAttribute="top" id="dZN-sq-VFi"/>
-                            <constraint firstItem="4oD-Ta-WZx" firstAttribute="bottom" secondItem="thS-el-0Dl" secondAttribute="bottom" id="uAc-g8-1NJ"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="4oD-Ta-WZx"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="B02-ps-v2W"/>
-                    <connections>
-                        <outlet property="testDataTextView" destination="thS-el-0Dl" id="t97-92-mCc"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="G2U-Gh-d2z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1658.2733812949641" y="604.85611510791364"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bcW-67-Fga">
